# ForceUnfreeze

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  build.ps1
include/: driverspecs.h
res/: ForceUnfreeze.manifest  ForceUnfreeze.rc
scripts/: Generate-Icon.ps1  Install-ForceUnfreezeScheduledTask.ps1  Invoke-ForceUnfreezeRecovery.ps1  Stop-ForceUnfreeze.ps1  Test-ForceUnfreeze.ps1  Uninstall-ForceUnfreezeScheduledTask.ps1
src/: main.cpp
